--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,125 @@
+html,
 body {
-    background-color: rebeccapurple;
+    height: 100%;
+    background-color: rgb(250, 240, 221);
+    font: 1em sans-serif;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form {
+    max-width: 250px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border: 3px solid #900;
+    padding: 1rem;
+    border-radius: 12px;
+    background-color: white;
+}
+
+input {
+    appearance: none;
+    width: 100%;
+    padding: 0.5em;
+    border: 1px solid #666;
+    border-radius: 4px;
+    margin: 0;
+
+    font-family: inherit;
+    font-size: 90%;
+
+    box-sizing: border-box;
+}
+
+input.invalid {
+    border: 2px solid red;
+    background-color: #fdd;
+}
+
+input:focus.invalid {
+    outline: none;
+    /* make sure keyboard-only users see a change when focusing */
+    border-style: dashed;
+}
+
+.error {
+    width: 100%;
+    font-size: 80%;
+    color: white;
+    background-color: #900;
+    border-radius: 0 0 5px 5px;
+    box-sizing: border-box;
+}
+.active {
+    padding: 0.25rem;
+    transition: all 0.3s ease-out;
+}
+
+form > div:nth-child(3) {
+    display: flex;
+    justify-content: center;
+}
+
+/* From Uiverse.io by KINGFRESS */
+button {
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: white;
+    background-color: #171717;
+    padding: 0.5em 1em;
+    border: none;
+    border-radius: 0.6rem;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+button span:not(:nth-child(6)) {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    height: 30px;
+    width: 30px;
+    background-color: rgb(145, 45, 45);
+    border-radius: 50%;
+    transition: 0.6s ease;
+}
+
+button span:nth-child(6) {
+    position: relative;
+}
+
+button span:nth-child(1) {
+    transform: translate(-3.3em, -4em);
+}
+
+button span:nth-child(2) {
+    transform: translate(-6em, 1.3em);
+}
+
+button span:nth-child(3) {
+    transform: translate(-0.2em, 1.8em);
+}
+
+button span:nth-child(4) {
+    transform: translate(3.5em, 1.4em);
+}
+
+button span:nth-child(5) {
+    transform: translate(3.5em, -3.8em);
+}
+
+button:hover span:not(:nth-child(6)) {
+    transform: translate(-50%, -50%) scale(4);
+    transition: 1.5s ease;
 }
